samples/_failures_safe/1761636790_350221_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_881f9d67.c: In function ‘main’:
./samples/SAFE/__tmp_881f9d67.c:180:9: error: expected ‘:’ or ‘...’ at end of input
  180 |         case 2
      |         ^~~~
./samples/SAFE/__tmp_881f9d67.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_881f9d67.c:180:9: error: expected declaration or statement at end of input
